<resources>
    <string name="app_name">AchieverFarm</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="achiever_farm">Achiever Farm</string>
    <string name="your_previous_orders">Your Previous Orders</string>
    <string name="order_amount">Order Amount</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_date">Order Date</string>
    <string name="order_count">Order Count</string>
    <string name="current_order">Current Order</string>
    <string name="track">Track</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="shop_by_category_fresh">Shop by category fresh</string>
    <string name="fresh">Fresh</string>
    <string name="dry">Dry</string>
    <string name="see_all">See All</string>
    <string name="name">Name</string>
    <string name="fresh_produce">Fresh Produce</string>
    <string name="shednet">Shednet</string>
    <string name="shed_net_symbol">Shed Net Symbol</string>
    <string name="open_field">Open Field</string>
    <string name="greenhouse">Greenhouse</string>
    <string name="fresh_produce_symbol">Fresh Produce Symbol</string>
    <string name="dry_produce">Dry Produce</string>
    <string name="greenhouse_symbol">Greenhouse symbol</string>
    <string name="open_field_symbol">Open Field Symbol</string>
    <string name="dry_produce_symbol">Dry Produce Symbol</string>
    <string name="item_name">Item Name</string>
    <string name="zero_dollars">$0.00</string>
    <string name="per_kg">/KG</string>
    <string name="zero">0</string>
    <string name="item_image">Item Image</string>
    <string name="recommended_uses_are">Recommended uses are …</string>
    <string name="packaged_in_a">Packaged in a …</string>
    <string name="origin_information">Origin Information</string>
    <string name="description">Description</string>
    <string name="additional_information">Additional Information</string>
    <string name="kgs">KG</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="grow_location">Grow Location</string>
    <string name="grow_length">Grow Length</string>
    <string name="average_shelf_life">Average Shelf Life</string>
    <string name="grow_tech">Grow Tech</string>
    <string name="source">Source</string>
    <string name="your_cart">Your Cart</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="save_cart">Save Cart</string>
    <string name="checking_out_for_s_items_in_stock">Checking out for %s items in stock</string>
    <string name="keep_shopping">Keep Shopping</string>
    <string name="not_done_shopping_yet">Not Done Shopping Yet?</string>
    <string name="or">Or</string>
    <string name="repeat_previous_order">Repeat Previous Order</string>
    <string name="order_now">Order Now</string>
    <string name="saved_carts">Saved Carts</string>
    <string name="checkout">Checkout</string>
    <string name="total_amount">Total Amount</string>
    <string name="use_a_saved_cart">Use A Saved Cart</string>
    <string name="d_item_s_in_the_list_not_in_stock">%d item(s) in the list not in stock</string>
    <string name="view_item_s">View Item(s)</string>
    <string name="add_more_items_to_s">Add more items</string>
    <string name="missing_something">Missing Something?</string>
    <string name="date">Date</string>
    <string name="cart_name">Cart Name</string>
    <string name="your_saved_cart">Your Saved Cart</string>
    <string name="your_saved_carts">Your Saved Carts</string>
    <string name="your_order">Your Order</string>
    <string name="drop_us_a_call">Drop Us A Call</string>
    <string name="orderid">OrderID:</string>
    <string name="show_nqr_code">SHOW\nQR CODE</string>
    <string name="order_status">Order Status</string>
    <string name="collection_point">Collection Point</string>
    <string name="location">Location\nLocation</string>
    <string name="collection_time">Collection Time</string>
    <string name="date_time">Date, Time</string>
    <string name="get_directions">Get Directions</string>
    <string name="view_all_items">View all items</string>
    <string name="item_total">Item Total</string>
    <string name="amount">Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="method">Method</string>
    <string name="have_any_questions">Have any questions?</string>
    <string name="contact_us">Contact Us</string>
    <string name="collection">Collection</string>
    <string name="collection_date">Collection Date</string>
    <string name="your_items">Your Items</string>
    <string name="payment">Payment</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="view_entire_cart_d_items">View Entire Cart (%d Items)</string>
    <string name="tax_10">Tax 10%</string>
    <string name="total">Total</string>
    <string name="complete_order">Complete Order</string>
    <string name="completed_order">Completed Your Order</string>
    <string name="tax">Tax</string>
    <string name="grand_total">Grand Total</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="quickies">Quickies</string>
    <string name="map">Map</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="events">Events</string>
    <string name="_0">0</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="muted">Muted</string>
    <string name="muted_chats_only">Muted Chats Only</string>
    <string name="favourites">Favourites</string>
    <string name="favourite_chats_only">Favourite Chats Only</string>
    <string name="all">All</string>
    <string name="all_chats">All Chats</string>
    <string name="groups">Groups</string>
    <string name="group_chats_only">Group Chats Only</string>
    <string name="good_day">Good Day,</string>
    <string name="message">Message</string>
    <string name="create_an_account">Create An Account</string>
    <string name="login">Login</string>
    <string name="error_caps">ERROR</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="birthday">Birthday</string>
    <string name="eula_agreement">By signing up you are agreeing to the terms and conditions of our EULA.</string>
    <string name="login_instead">Login Instead</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_get_you_started">Let\'s get you started</string>
    <string name="let_s_get_you_back_in">Let\'s get you back in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_instead">Create An Account</string>
    <string name="turn_up">Turn Up</string>
    <string name="files">Files</string>
    <string name="take_picture">Take Picture</string>
    <string name="music">Music</string>
    <string name="filter">Filter</string>
    <string name="timer">Timer</string>
    <string name="grid">Grid</string>
    <string name="flash">Flash</string>
    <string name="rotate">Rotate</string>
    <string name="ui1">UI!</string>
    <string name="ui2">UI2</string>
    <string name="_15s">15s</string>
    <string name="normal">NORMAL</string>
    <string name="join_us_for_a_unique_user_experience_and_nmake_the_most_of_our_app">Join us for a unique user experience and\nmake the most of our app</string>
    <string name="let_s_begin_your_journey_with_our_app">Let’s Begin Your\nJourney With Our App!</string>
    <string name="terms_of_use_and_privacy_policy">Terms of Use and Privacy Policy</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="product_name">Product Name</string>
    <string name="item_details">Item Details</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="e_g_party_list">E.g Party List</string>
    <string name="give_your_cart_a_cool_name">Give your cart a cool name!</string>
    <string name="saving_your_cart">Saving Your cart…</string>
    <string name="cart_saved">Cart Saved!</string>
    <string name="units">UNIT</string>
    <string name="change_requested">Change Requested?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="preparing_order">Preparing Your Order</string>
    <string name="ready_order">Ready For Collection</string>
    <string name="cash_on_delivery">Cash On Pickup</string>
</resources>